tests/paczka1/small_fuzzy/60701580.err
Error in line 1: S171 S805 11,9
Error in line 4: lJPp A175 12,0
Error in line 3: D8xGkT S343 34,7
